# system-notifications

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.adoc  LICENSE  README.adoc  README.md  arcitecture.adoc  justfile  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  deploy.yml
debian/: battery-monitor.service  battery-monitor.timer  changelog  control  copyright  diskspace-monitor.timer  postinst  postrm  prerm  rules  system-notifier.install  system-notifier.service
src/: battery.rs  common.rs  config.rs  diskspace.rs  lib.rs  main.rs
systemd/: battery-monitor.service  battery-monitor.timer  diskspace-monitor.service  diskspace-monitor.timer
systemd/user/: battery-monitor.service  battery-monitor.timer  diskspace-monitor.service  diskspace-monitor.timer
tests/fixtures/: battery_disabled.toml  partial_battery_threshold.toml
