[package]
name = "system-notifier"
version = "0.1.0"
edition = "2021"
description = "System monitoring services that send desktop notifications for battery and disk space events"
authors = ["Tyler Kelly <tyler.kelly@outlook.com>"]
license = "MIT"
repository = "https://github.com/tylerkelly/system-notifier"
readme = "README.adoc"

[dependencies]
notify-rust = "4"
sysinfo = "0.32"
battery = "0.7"

[dev-dependencies]
proptest = "1.5"

[[bin]]
name = "battery-monitor"
path = "src/bin/battery-monitor.rs"

[[bin]]
name = "diskspace-monitor"
path = "src/bin/diskspace-monitor.rs"

[package.metadata.deb]
maintainer = "Tyler Kelly <tyler.kelly@outlook.com>"
copyright = "2026, Tyler Kelly <tyler.kelly@outlook.com>"
license-file = ["LICENSE", "4"]
extended-description = """System notification services for monitoring battery and disk space"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/battery-monitor", "usr/bin/", "755"],
    ["target/release/diskspace-monitor", "usr/bin/", "755"],
    ["README.adoc", "usr/share/doc/system-notifier/README.adoc", "644"],
]
systemd-units = [
    { unit-name = "battery-monitor", enable = false },
    { unit-name = "battery-monitor.timer", enable = true },
    { unit-name = "diskspace-monitor", enable = false },
    { unit-name = "diskspace-monitor.timer", enable = true },
]
