[package]
name = "system-notifier"
version = "0.2.1"
edition = "2021"
description = "System monitoring services that send desktop notifications for battery and disk space events"
authors = ["Tyler Kelly <tyler.kelly@outlook.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/tylerkelly/system-notifier"
readme = "README.adoc"

[dependencies]
notify-rust = "4"
sysinfo = "0.38"
battery = "0.7"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
merge = "0.2.0"

[dev-dependencies]
proptest = "1.11"

[[bin]]
name = "battery-monitor"
path = "src/bin/battery-monitor.rs"

[[bin]]
name = "diskspace-monitor"
path = "src/bin/diskspace-monitor.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[package.metadata.deb]
maintainer = "Tyler Kelly <tyler.kelly@outlook.com>"
copyright = "2026, Tyler Kelly <tyler.kelly@outlook.com>"
license-file = ["LICENSE", "4"]
extended-description = """System notification services for monitoring battery and disk space"""
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    ["target/release/battery-monitor", "usr/bin/", "755"],
    ["target/release/diskspace-monitor", "usr/bin/", "755"],
    ["README.adoc", "usr/share/doc/system-notifier/README.adoc", "644"],
    ["systemd/user/battery-monitor.service", "usr/lib/systemd/user/", "644"],
    ["systemd/user/battery-monitor.timer", "usr/lib/systemd/user/", "644"],
    ["systemd/user/diskspace-monitor.service", "usr/lib/systemd/user/", "644"],
    ["systemd/user/diskspace-monitor.timer", "usr/lib/systemd/user/", "644"],
]
